--- a/gatewayService-dev.properties
+++ b/gatewayService-dev.properties
@@ -3,8 +3,11 @@ zuul.routes.mpesa.url=http://localhost:8090
 #zuul.routes.mpesa.url=http://payment-mpesa-service:8090
 zuul.routes.mpesa.service-id=paymentMpesaService
 zuul.routes.mpesa.stripPrefix=false
+
 eureka.client.enabled=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 #eureka.client.service-url.defaultZone=http://registry-service:8761/eureka
+
+management.security.enabled=false
