--- a/gatewayService-dev.properties
+++ b/gatewayService-dev.properties
@@ -1,5 +1,5 @@
 #Zuul routes. Here for /mpesa path, we are routing to localhost:8090 with extra path after that.
-zuul.routes.mpesa.url=http://localhost:8090
+#zuul.routes.mpesa.url=http://localhost:8090
 #zuul.routes.mpesa.url=http://payment-mpesa-service:8090
 zuul.routes.mpesa.service-id=paymentMpesaService
 zuul.routes.mpesa.stripPrefix=false
