--- a/gatewayService-dev.properties
+++ b/gatewayService-dev.properties
@@ -11,3 +11,5 @@ eureka.client.fetch-registry=true
 #eureka.client.service-url.defaultZone=http://registry-service:8761/eureka
 
 management.security.enabled=false
+
+endpoints.refresh.enabled=true
