--- a/gatewayService/gatewayService.properties
+++ b/gatewayService/gatewayService.properties
@@ -1,2 +1,2 @@
 zuul.routes.paymentMpesaService.service-id=paymentMpesaService
-zuul.routes.paymentMpesaService.stripPrefix=false
+zuul.routes.paymentMpesaService.stripPrefix=true
