--- a/configGatewayService/gatewayService.properties
+++ b/configGatewayService/gatewayService.properties
@@ -1,3 +1,3 @@
 zuul.routes.paymentMpesaService.service-id=paymentMpesaService
 
-swagger.service.name=paymentMpesaService
+swagger.service.name=paymentMpesaService,paymentAirtelService
