--- a/configGatewayService/gatewayService-prod.properties
+++ b/configGatewayService/gatewayService-prod.properties
@@ -1,1 +1,2 @@
 zuul.routes.paymentMpesaService.url=http://payment-mpesa-service:8090
+zuul.routes.paymentAirtelService.url=http://payment-mpesa-service:8091
