--- a/configGatewayService/gatewayService.properties
+++ b/configGatewayService/gatewayService.properties
@@ -1,3 +1,5 @@
 zuul.routes.paymentMpesaService.service-id=paymentMpesaService
+zuul.routes.paymentAirtelService.service-id=paymentAirtelService
+
 
 swagger.service.name=paymentMpesaService,paymentAirtelService
