--- a/configGatewayService/gatewayService.properties
+++ b/configGatewayService/gatewayService.properties
@@ -2,4 +2,4 @@ zuul.routes.paymentMpesaService.service-id=paymentMpesaService
 zuul.routes.paymentAirtelService.service-id=paymentAirtelService
 
 
-swagger.service.name=paymentMpesaService,paymentAirtelService
+swagger.service.name=paymentMpesaService,paymentAirtelService,turbineDashboard
