--- a/configGatewayService/gatewayService-dev.properties
+++ b/configGatewayService/gatewayService-dev.properties
@@ -1,2 +1,3 @@
 zuul.routes.paymentMpesaService.url=http://localhost:8090
 zuul.routes.paymentAirtelService.url=http://localhost:8091
+zuul.routes.turbineDashboard.url=http://localhost:8989
