--- a/configGatewayService/gatewayService.properties
+++ b/configGatewayService/gatewayService.properties
@@ -1,6 +1,6 @@
 zuul.routes.paymentMpesaService.service-id=paymentMpesaService
 zuul.routes.paymentAirtelService.service-id=paymentAirtelService
-zuul.routes.turbineDashboard.service-id= turbineDashboard
+zuul.routes.turbineDashboard.service-id=turbineDashboard
 
 
 swagger.service.name=paymentMpesaService,paymentAirtelService,turbineDashboard
