--- a/configGatewayService/gatewayService-prod.properties
+++ b/configGatewayService/gatewayService-prod.properties
@@ -1,3 +1,3 @@
 zuul.routes.paymentMpesaService.url=http://payment-mpesa-service:8090
-zuul.routes.paymentAirtelService.url=http://payment-mpesa-service:8091
-zuul.routes.turbineDashboard.url=http://payment-mpesa-service:8989
+zuul.routes.paymentAirtelService.url=http://payment-airtel-service:8091
+zuul.routes.turbineDashboard.url=http://turbine-dashboard:8989
