updated configuration files

--- a/configPaymentsGatewayService/paymentsgatewayservice.properties
+++ b/configPaymentsGatewayService/paymentsgatewayservice.properties
@@ -1,6 +1,6 @@
 zuul.routes.paymentsmpesaservice.service-id=paymentsmpesaservice
 zuul.routes.paymentsairtelservice.service-id=paymentsairtelservice
-zuul.routes.turbinedashboard.service-id=turbinedashboard
+zuul.routes.paymentsturbinedashboardservice.service-id=paymentsturbinedashboardservice
 
 
-swagger.service.name=paymentsmpesaservice,paymentsairtelservice,turbinedashboard
+swagger.service.name=paymentsmpesaservice,paymentsairtelservice,paymentsturbinedashboardservice
