updated configuration files

--- a/configPaymentsGatewayService/paymentsgatewayservice-prod.properties
+++ b/configPaymentsGatewayService/paymentsgatewayservice-prod.properties
@@ -1,3 +1,3 @@
 zuul.routes.paymentsmpesaservice.url=http://payment-service-mpesa.production:8090
 zuul.routes.paymentsairtelservice.url=http://payment-airtel-service:8091
-zuul.routes.turbinedashboard.url=http://turbine-dashboard:8989
+zuul.routes.paymentsturbinedashboardservice.url=http://payments-turbine-monitoring-service.production:8989
